Fix spacing for buttons in temporary homepage block.

--- a/sites/all/themes/ysga/css/style.css
+++ b/sites/all/themes/ysga/css/style.css
@@ -579,7 +579,7 @@ img, iframe {
 .inicio-temporal {
   margin-bottom: 40px; }
   .inicio-temporal .button--alpha {
-    margin-top: 30px;
+    margin: 30px 0;
     font-size: 14px;
     font-size: 1.4rem; }
     @media screen and (min-width: 768px) {
