--- a/sites/all/themes/ysga/sass/partials/modules/_blocks.scss
+++ b/sites/all/themes/ysga/sass/partials/modules/_blocks.scss
@@ -96,7 +96,7 @@
 .inicio-temporal {
   margin-bottom: 40px;
   .button--alpha {
-    margin-top: 30px;
+    margin: 30px 0;
     @include font-size(14);
     @include media($medium) {
       @include font-size(16);
